# zl-cli

./: Cargo.toml
config/: test.toml
src/: lib.rs  main.rs  zerror.rs
src/api/: mod.rs
src/config/: config.rs  mod.rs
tests/: config_test.rs
