[package]
name = "zl-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.97"
toml = "0.7.4"
z-api = { git = "https://github.com/zl-cli/z-api", version = "0.1.0" }
